--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,12 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/Joern/git/VillageWorld/src/lib/jar/lwjgl.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/Joern/git/VillageWorld/src/lib/natives"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Joern/git/VillageWorld/src/lib/jar/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Joern/git/VillageWorld/src/lib/jar/slick-util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
